# influx2prom

./: .gitignore  README.md  pyproject.toml  sample_test.py  setup.py
examples/: csv-config.json  csv-example.sh  query-config.json  query-convert-example.sh  sample-data.json  sample.env
examples/data/: cpu.csv  memory.csv
influx2prom/influx2prom/: EXAMPLE_OUTPUT.md  GRAFANA_JSON_FORMAT.md  sample_bulk_input.json
influx2prom/influx2prom/src/: influx2promql.py
influx2prom/influx2prom/tests/: test_main.py
src/: main.py
src/influx2prom/: __init__.py  cli.py  converter.py  csv_processor.py  prom_converter.py
tests/: test_influx2promql.py
