[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "influx2prom"
version = "0.1.0"
description = "Convert InfluxDB queries to Prometheus format"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Author", email = "author@example.com"},
]
dependencies = [
    "influxdb-client>=1.36.0",
    "click>=8.1.3",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
influx2prom = "influx2prom.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true